Added Salesforce Ant Migration Tool to retrieve code.
MavensMate does not always correctly retrieve code causing it to incorrectly appear as if artifacts have been deleted. The Salesforce Ant Migration Tool is more reliable and faster.

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@ config/
 debug/
 *.sublime-project
 *.sublime-workspace
+build.properties
 src/aura/testApplication/**
+src/aura/testApplicationDepends/**
 src/aura/testComponent/**
 src/classes/LtngTestComponentController.*
+src/pages/LightningOutTest.*
