Added help text support for input components.

--- a/src/package.xml
+++ b/src/package.xml
@@ -33,5 +33,9 @@
         <members>utils</members>
         <name>AuraDefinitionBundle</name>
     </types>
+    <types>
+        <members>SLDSPopoverFixForVF</members>
+        <name>StaticResource</name>
+    </types>
     <version>41.0</version>
 </Package>
