--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -42,6 +42,7 @@
 		"no-shadow": "warn",
 		"no-shadow-restricted-names": "error",
 		"no-console": [ "warn", { "allow": [ "warn", "error" ] } ],
+		"no-warning-comments": [ "warn", { "location": "anywhere" } ],
 		"eqeqeq": "error",
 		"for-direction": "error",
 		"getter-return": "error",
